# robotics_transformer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  load_cudnn.sh  pyproject.toml  requirements.txt  sequence_agent.py  sequence_agent_test.py  sequence_agent_test_set_up.py  transformer.py  transformer_network.py  transformer_network_test.py  transformer_network_test_set_up.py  transformer_test.py
film_efficientnet/: __init__.py  film_conditioning_layer.py  film_conditioning_layer_test.py  film_efficientnet_encoder_test.py  preprocessors_test.py  pretrained_efficientnet_encoder.py
robotics_transformer/: __init__.py  sequence_agent.py  sequence_agent_test_set_up.py  transformer_network.py  transformer_network_test.py  transformer_network_test_set_up.py
robotics_transformer/film_efficientnet/: film_efficientnet_encoder.py  preprocessors.py  pretrained_efficientnet_encoder.py  pretrained_efficientnet_encoder_test.py
robotics_transformer/tokenizers/: action_tokenizer.py  image_tokenizer.py  image_tokenizer_test.py  token_learner.py  token_learner_test.py
tokenizers/: action_tokenizer.py  action_tokenizer_test.py  token_learner.py
